--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "example-server": "node examples/autodiscovery-auth/server.js",
-    "example-client": "node examples/autodiscovery-auth/client/client.js"
+    "example-client": "node examples/autodiscovery-auth/client/client.js",
+    "test": "tape test/*.js"
   },
   "main": "lib/index.js",
   "directories": {
@@ -26,6 +27,6 @@
     "sqlite3": "^3.0.5"
   },
   "devDependencies": {
-    "mocha": "^1.19.0"
+    "tape": "^3.5.0"
   }
 }
